# Wasm3D

./: Cargo.toml
src/: Pixel.rs  Point.rs  color.rs  gamewindow.rs  lib.rs  mesh.rs  viewpoint.rs
src/dimension/: Point.rs  math.rs  mesh.rs  mod.rs  viewpoint.rs
web/: index.html  main.js  main.ts  tsconfig.json
